compiler/tests/invalid_programs/variables/constant_arg_mutation.jm
#!TypeError

def foo(const bar:Int)
  bar = bar + 2
  return bar
end

puts(foo(3))
